--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header">
+    <header id="block1" class="header section">
         <nav class="animate__animated animate__bounce">
             <div class="flex-container ">
                 <div class="left-side">
                     <a href=""><img src="img/logo.svg" alt="" class="logo"></a>
-                    <span>|</span>
-                    <p class="introduce">I'am Daniel</p>
+                    <!-- <span>|</span> -->
+                    <p class="introduce">I'm Daniel</p>
                 </div>
                 <div class="mobile-menu__btn">
                     <div class="mobile-menu__icon"></div>
                 </div>
                 <div class="right-side">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">Works</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li ><a id="toHeader" class="active" href="#block1">Home</a></li>
+                        <li><a href="#block2">Features</a></li>
+                        <li><a href="#block3">Works</a></li>
+                        <li><a href="#block4">Team</a></li>
+                        <li><a href="#block5">Facts</a></li>
+                        <li><a href="#block6">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -48,7 +49,7 @@
         </div>
     </header>
 
-    <section class="features">
+    <section id="block2" class="features section">
         <div class="container">
             <h2 class="wow animate__animated animate__bounceInLeft">FEATURES</h2>
             <div class="separator">
@@ -87,7 +88,7 @@
         <div class="div"></div>
     </section>
 
-    <section class="works">
+    <section id="block3" class="works section">
         <div class="container">
             <h2 class="wow animate__animated animate__bounceInLeft">WORKS</h2>
             <div class="separator">
@@ -172,7 +173,7 @@
         </div>
     </section>
 
-    <section class="team">
+    <section id="block4" class="team section">
         <div class="container">
             <h2 class="wow animate__animated animate__bounceInLeft">TEAM</h2>
             <div class="separator">
@@ -261,7 +262,7 @@
         </div>
     </section>
 
-    <section class="counter">
+    <section id="block5" class="counter section">
         <div class="container">
             <h2 class="wow animate__animated animate__bounceInLeft">SOME FUN FACTS</h2>
             <div class="separator">
@@ -302,7 +303,7 @@
         </div>
     </section>
 
-    <section class="discuss">
+    <section id="block6" class="discuss section">
         <div class="container">
             <h2 class="wow animate__animated animate__bounceInLeft">Let’s Discuss</h2>
             <div class="separator">
@@ -353,11 +354,11 @@
         </div>
     </section>
 
-    <section class="map wow animate__animated  animate__fadeIn">
+    <section id="block7" class="map wow animate__animated  animate__fadeIn section">
         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae14913532b695c3b1de91cb2e5269cc62c0b2ea8b7183d94d1b0df13a907cf0b&amp;width=100%&amp;height=240&amp;lang=ru_RU&amp;scroll=true"></script>
     </section>
 
-    <footer class="footer">
+    <footer id="block8" class="footer section">
         <div class="container">
             <div class="about">
                 <a href="#"><img src="img/logo.svg" alt=""></a>
