--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </ul>
             <div class="flex-list wow animate__animated  animate__fadeIn">
                 <div class="list-item box Branding">
-                    <img src="img/filter2.png" alt="">
+                    <img src="img/filter2.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="list-item box Branding">
-                    <img src="img/filter3.png" alt="">
+                    <img src="img/filter3.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="list-item box Web">
-                    <img src="img/filter4.png" alt="">
+                    <img src="img/filter4.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="list-item box Web">
-                    <img src="img/filter1.png" alt="">
+                    <img src="img/filter1.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="list-item box Logo-Design">
-                    <img src="img/filter5.png" alt="">
+                    <img src="img/filter5.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="list-item box Logo-Design">
-                    <img src="img/filter6.png" alt="">
+                    <img src="img/filter6.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="list-item box Photography">
-                    <img src="img/filter7.png" alt="">
+                    <img src="img/filter7.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <div class="list-item box Photography">
-                    <img src="img/filter8.png" alt="">
+                    <img src="img/filter8.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
