--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brendi</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="js/slick.css">
+    <link rel="stylesheet" href="normalize.min.css">
+    <link rel="stylesheet" href="js/slick.min.css">
     <link rel="stylesheet" href="js/animate.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <header id="block1" class="header section">
