--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
             </ul>
             <div class="flex-list wow animate__animated  animate__fadeIn">
                 <div class="list-item box Branding">
-                    <img src="img/filter2.jpg" alt="">
+                    <picture>
+                        <source srcset="img/filter2-min.jpg" media="(max-width: 800px)">
+                        <img src="img/filter2.jpg" alt="">
+                    </picture>
+                    
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
