--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
         </div>
         <div class="div"></div>
     </section>
-
     <section id="block3" class="works section">
         <div class="container">
             <h2 class="wow animate__animated animate__bounceInLeft">WORKS</h2>
@@ -106,10 +105,7 @@
             </ul>
             <div class="flex-list wow animate__animated  animate__fadeIn">
                 <div class="list-item box Branding">
-                    <picture>
-                        <source srcset="img/filter2-min.jpg" media="(max-width: 800px)">
-                        <img src="img/filter2.jpg" alt="">
-                    </picture>
+                    <img class="lazyload" data-src="img/filter2.jpg" alt="">
                     
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
@@ -118,7 +114,7 @@
                     </div>
                 </div>
                 <div class="list-item box Branding">
-                    <img src="img/filter3.jpg" alt="">
+                    <img class="lazyload" data-src="img/filter3.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -126,7 +122,7 @@
                     </div>
                 </div>
                 <div class="list-item box Web">
-                    <img src="img/filter4.jpg" alt="">
+                    <img class="lazyload" data-src="img/filter4.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -134,7 +130,7 @@
                     </div>
                 </div>
                 <div class="list-item box Web">
-                    <img src="img/filter1.jpg" alt="">
+                    <img class="lazyload" data-src="img/filter1.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -142,7 +138,7 @@
                     </div>
                 </div>
                 <div class="list-item box Logo-Design">
-                    <img src="img/filter5.jpg" alt="">
+                    <img class="lazyload" data-src="img/filter5.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -150,7 +146,7 @@
                     </div>
                 </div>
                 <div class="list-item box Logo-Design">
-                    <img src="img/filter6.jpg" alt="">
+                    <img class="lazyload" data-src="img/filter6.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -158,7 +154,7 @@
                     </div>
                 </div>
                 <div class="list-item box Photography">
-                    <img src="img/filter7.jpg" alt="">
+                    <img class="lazyload" data-src="img/filter7.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -166,7 +162,7 @@
                     </div>
                 </div>
                 <div class="list-item box Photography">
-                    <img src="img/filter8.jpg" alt="">
+                    <img class="lazyload" data-src="img/filter8.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -408,6 +404,7 @@
 </body>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/lazyload.min.js"></script>
 <script src="https://kit.fontawesome.com/591e17d896.js" crossorigin="anonymous"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/index.js"></script>
