--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="list-item box Branding">
-                    <img class="lazyload" data-src="img/filter3.jpg" alt="">
+                    <img src="img/filter3.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="list-item box Web">
-                    <img class="lazyload" data-src="img/filter4.jpg" alt="">
+                    <img src="img/filter4.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="list-item box Web">
-                    <img class="lazyload" data-src="img/filter1.jpg" alt="">
+                    <img src="img/filter1.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="list-item box Logo-Design">
-                    <img class="lazyload" data-src="img/filter5.jpg" alt="">
+                    <img src="img/filter5.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="list-item box Logo-Design">
-                    <img class="lazyload" data-src="img/filter6.jpg" alt="">
+                    <img src="img/filter6.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="list-item box Photography">
-                    <img class="lazyload" data-src="img/filter7.jpg" alt="">
+                    <img src="img/filter7.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <div class="list-item box Photography">
-                    <img class="lazyload" data-src="img/filter8.jpg" alt="">
+                    <img src="img/filter8.jpg" alt="">
                     <div class="mask">
                         <img src="img/works-eyes.svg" alt="">
                         <p class="title">Labore et dolore magnam </p>
@@ -404,8 +404,7 @@
 </body>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/slick.min.js"></script>
-<script src="js/lazyload.min.js"></script>
 <script src="https://kit.fontawesome.com/591e17d896.js" crossorigin="anonymous"></script>
 <script src="js/wow.min.js"></script>
-<script src="js/index.js"></script>
+<script src="js/index.min.js"></script>
 </html>
