--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brendi</title>
+    <link rel="preload" href="img/header.jpg" as="image"/>
     <link rel="stylesheet" href="normalize.min.css">
     <link rel="stylesheet" href="js/slick.min.css">
     <link rel="stylesheet" href="js/animate.min.css">
